Fist Wk Assignment

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 
-<h1>Welcome to my website</h1>
-<p>sign up here</p>
+<h1>Welcome to My Website</h1>
+<p>Thanks for visiting my website!!!</p>
+<p>As of right now I currently do not know what I want to build, but maybe I'll try to build something similar to Twitter or maybe "My Fitness Pal".</p>
