--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
 
 <h1>About Us</h1>
-<p>We are working on our one month rails project</p>
+
+<p>Just to give you a little info about myself. I am currently working as shipping and receiving associate but I want to change my career so I became interested in learning to code. So I was suggested to take the One Month Rails course along with some others.</p>
