Imported Boostrtap Template

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-
-<h1>About Us</h1>
-
-<p>Just to give you a little info about myself. I am currently working as shipping and receiving associate but I want to change my career so I became interested in learning to code. So I was suggested to take the One Month Rails course along with some others.</p>
+<div class="jumbotron">
+    <div class="container">
+        <h1>About us</h1>
+        <p>This is the sample project I built for <a href="https://onemonthrails.com">One Month Rails</a>.</p>
+    </div>
+</div>
