--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <li class="nav-item"><%= link_to "Contact", "#", class: "nav-link" %></li>
 
           <% if user_signed_in? %>
-          <li class="nav-item pull-md-right"><%= link_to "Log out", signout_path, method: :get,  class: "nav-link" %></li>
+          <li class="nav-item pull-md-right"><%= link_to "Log out", signout_path, method: :delete,  class: "nav-link" %></li>
           <% else %>
            <li class="nav-item pull-md-right"><%= link_to "Sign up",  signup_path,  class: "nav-link btn btn-primary" %></li>
            <li class="nav-item pull-md-right"><%= link_to "Sign in",  signin_path,  class: "nav-link" %></li>
